Add View for UsersManagement/Details/ID

--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/UserManagement/All.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/UserManagement/All.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<User>
 
+@{ 
+    ViewData["Title"] = "All Users";
+}
+
 <table class="table table-hover">
     <tr>
         <th>ID</th>
