Add displaying surname and tel.num. in UM/Details view

--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/UserManagement/Details.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/UserManagement/Details.cshtml
@@ -71,6 +71,8 @@
         <tr>
             <th>ID</th>
             <th>Name</th>
+            <th>Surname</th>
+            <th>Phone Number</th>
             <th>Company</th>
         </tr>
 
@@ -79,6 +81,8 @@
             <tr>
                 <td>@addedContactPerson.ID</td>
                 <td>@addedContactPerson.Name</td>
+                <td>@addedContactPerson.Surname</td>
+                <td>@addedContactPerson.TelephoneNum</td>
                 <td>@addedContactPerson.Company.Name</td>
             </tr>
         }
