--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/_ViewImports.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CustomerRelationshipManager
 @using CustomerRelationshipManager.Models
+@using CustomerRelationshipManager.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
