--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/All.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/All.cshtml
@@ -21,7 +21,7 @@
         <tr>
             <td>@company.ID</td>
             <td>@company.Name</td>
-            <td>@company.BusinessIndustry</td>
+            <td>@company.BusinessIndustry.Name</td>
             <td>@company.NIP</td>
             <td>@company.City</td>
             <td>@company.Address</td>
