Add creating business notes links in /companies

--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/All.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/All.cshtml
@@ -30,6 +30,9 @@
                 <a asp-controller="Companies" asp-action="Details" asp-route-ID="@company.ID" class="btn btn-primary">Details</a>
                 <a asp-controller="Companies" asp-action="Edit" asp-route-ID="@company.ID" class="btn btn-primary">Edit</a>
                 <a asp-controller="Companies" asp-action="Delete" asp-route-ID="@company.ID" class="btn btn-danger">Delete</a>
+                <a asp-controller="BusinessNotes" asp-action="Create" asp-route-CompanyID="@company.ID" class="btn btn-secondary">
+                    Create business note
+                </a>
             </td>
         </tr>
     }
