--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/Details.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/Details.cshtml
@@ -86,3 +86,11 @@
         }
     </table>
 </div>
+
+<!-- Create business note -->
+
+<div class="row">
+    <a asp-controller="BusinessNotes" asp-action="Create" asp-route-CompanyID="@Model.ID" class="col-sm-12 btn-block btn-light text-secondary text-left">
+        Create Business Note (Click)
+    </a>
+</div>
