Add links to add contact person in /companies

--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/All.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/All.cshtml
@@ -33,6 +33,9 @@
                 <a asp-controller="BusinessNotes" asp-action="Create" asp-route-CompanyID="@company.ID" class="btn btn-secondary">
                     Create business note
                 </a>
+                <a asp-controller="ContactPeople" asp-action="Create" asp-route-CompanyID="@company.ID" class="btn btn-secondary">
+                    Add contact person
+                </a>
             </td>
         </tr>
     }
