--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/Home/Index.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/Home/Index.cshtml
@@ -2,9 +2,47 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div>
-    @if (User.Identity.IsAuthenticated)
-    {
-        <h2>You are logged in</h2>
-    }
-</div>
+    <div>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <div class="row">
+                <div class="col-4">
+                    Hello @User.Identity.Name
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <a class="btn btn-block btn-primary" asp-controller="companies" asp-action="all">Companies</a>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <a class="btn btn-block btn-primary" asp-controller="contactpeople" asp-action="all">Contact People</a>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <a class="btn btn-block btn-primary" asp-controller="businessnotes" asp-action="all">Business Notes</a>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <a class="btn btn-block btn-primary" asp-controller="usermanagement" asp-action="all">User Management</a>
+                </div>
+            </div>
+
+        }
+        else
+        {
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <a class="btn btn-block btn-primary" asp-controller="home" asp-action="signin">Sign in</a>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <a class="btn btn-block btn-secondary" asp-controller="home" asp-action="register">Register</a>
+                </div>
+            </div>
+        }
+    </div>
