--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/ContactPeople/Edit.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/ContactPeople/Edit.cshtml
@@ -42,5 +42,6 @@
         <div class="text-danger" asp-validation-summary="All"></div>
         <div>
             <button class="btn btn-primary" type="submit">Update</button>
+            <a class="btn btn-danger" type="button" asp-controller="ContactPeople" asp-action="Index">Cancel</a>
         </div>
     </form>
