--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/Details.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/Details.cshtml
@@ -91,11 +91,11 @@
 
 <div class="row">
     <a asp-controller="BusinessNotes" asp-action="Create" asp-route-CompanyID="@Model.ID" 
-       class="col-sm-12 btn-block btn-light text-secondary text-left">
-        Create Business Note (Click)
+       class="col-sm-12 btn-block btn-secondary text-left">
+        Add <b>Business Note</b>
     </a>
     <a asp-controller="ContactPeople" asp-action="Create" asp-route-CompanyID="@Model.ID" 
-       class="col-sm-12 btn-block btn-light text-secondary text-left">
-        Add contact person
+       class="col-sm-12 btn-block btn-secondary text-left">
+        Add <b>Contact Person</b>
     </a>
 </div>
