--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/Edit.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/Edit.cshtml
@@ -57,5 +57,6 @@
         <div class="text-danger" asp-validation-summary="All"></div>
         <div>
             <button class="btn btn-primary" type="submit">Update</button>
+            <a class="btn btn-danger" type="button" asp-controller="Companies" asp-action="Index">Cancel</a>
         </div>
     </form>
