--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/BusinessNotes/Create.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/BusinessNotes/Create.cshtml
@@ -4,15 +4,16 @@
     ViewData["Title"] = "Create business note";
 }
 
-<form method="post" asp-controller="businessnotes" asp-action="create">
-    <input hidden asp-for="CompanyID" />
-    <input hidden asp-for="UserWhoAddedID" />
+    <form method="post" asp-controller="businessnotes" asp-action="create">
+        <input hidden asp-for="CompanyID" />
+        <input hidden asp-for="UserWhoAddedID" />
 
-    <div>
-        <label asp-for="Content"></label>
-        <textarea asp-for="Content" ></textarea>
-        <span asp-validation-for="Content"></span>
-    </div>
+        <div>
+            <label asp-for="Content"></label>
+            <textarea asp-for="Content"></textarea>
+            <span asp-validation-for="Content"></span>
+        </div>
 
-    <button type="submit" class="btn btn-primary">Create</button>
-</form>
+        <button type="submit" class="btn btn-primary">Create</button>
+        <a class="btn btn-danger" asp-controller="Companies" asp-action="Details" asp-route-ID="@Model.CompanyID">Cancel</a>
+    </form>
