--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/_ViewImports.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CustomerRelationshipManager
 @using CustomerRelationshipManager.Models
 @using CustomerRelationshipManager.ViewModels
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
