--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/UserManagement/_Layout.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/UserManagement/_Layout.cshtml
@@ -22,10 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Index">Companies</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserManagement" asp-action="Index">Users</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Create">Create</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserManagement" asp-action="Create">Create</a>
                         </li>
                     </ul>
                         <ul class="navbar-nav ml-auto">
