--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/UserManagement/All.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/UserManagement/All.cshtml
@@ -1,6 +1,8 @@
-﻿@model IEnumerable<User>
+﻿@model IPagedList<User>
+@using X.PagedList;
+@using X.PagedList.Mvc.Core;
 
-@{ 
+@{
     ViewData["Title"] = "All Users";
 }
 
@@ -13,7 +15,7 @@
         <th>Operations</th>
     </tr>
 
-    @foreach(User user in Model)
+    @foreach (User user in Model)
     {
         <tr>
             <td>@user.ID</td>
@@ -28,3 +30,8 @@
         </tr>
     }
 </table>
+
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("All", "UserManagement", new { page }))
