--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/Home/Index.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/Home/Index.cshtml
@@ -5,9 +5,12 @@
     <div>
         @if (User.Identity.IsAuthenticated)
         {
-            <div class="row">
+            <div class="row justify-content-between">
                 <div class="col-4">
                     Hello @User.Identity.Name
+                </div>
+                <div class="col-4">
+                    <a class="btn-link" asp-controller="Home" asp-action="AccountDetails">Account Details</a>
                 </div>
             </div>
             <div class="row justify-content-center">
