--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/All.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/Companies/All.cshtml
@@ -42,4 +42,4 @@
 <br />
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
-@Html.PagedListPager(Model, page => Url.Action("All", "Companies", new { page }))
+@Html.PagedListPager(Model, page => Url.Action("All", "Companies", new { page, businessIndustryID = ViewBag.BusinessIndustryFilter }))
