--- a/CustomerRelationshipManager/CustomerRelationshipManager/Views/UserManagement/_Layout.cshtml
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/Views/UserManagement/_Layout.cshtml
@@ -27,6 +27,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UserManagement" asp-action="Create">Create</a>
                         </li>
+                        @if (User.HasClaim(ClaimTypes.Role, RoleEnum.Admin.ToString()))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="UserManagement" asp-action="ShowDeleted">
+                                    Deleted Users
+                                </a>
+                            </li>
+                        }
+
                     </ul>
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
